--- a/2022-2023/Machine Learning/1.lecture-introductions.org
+++ b/2022-2023/Machine Learning/1.lecture-introductions.org
@@ -4,7 +4,13 @@
 #+date: <TODO>
 #+startup: beamer
 #+include: ./header.org
-#+property: header-args:python :eval never-export :results none :exports none
+#+property: header-args:python :eval never-export :results none :exports none :session
+
+#+begin_src python
+import numpy as np
+import pandas as pd
+np.set_printoptions(suppress=True)
+#+end_src
 
 * Introduction
 
@@ -66,14 +72,16 @@ print(y)
 
 All of the source can be run by yourselves if you use the same python environment
 (i.e. that you have installed all the appropriate libraries). On the git repository,
-I've included the =environment.yml= file used in the production of these lectures.
+I've included the [[https://git.sr.ht/~jaymorgan/teaching/tree/master/item/2022-2023/Machine%20Learning/environment.yml][=environment.yml=]] file used in the production of these lectures.
 
 To run the code:
 
-#+begin_src bash
-wget https://git.sr.ht/~jaymorgan/teaching/tree/master/item/2022-2023/Machine%20Learning/environment.yml
+#+begin_src bash :eval never-export
+wget https://git.sr.ht/~jaymorgan/teaching/blob/master/2022-2023/Machine%20Learning/environment.yml
+conda env create -f environment.yml  # recreate the conda env
+conda activate ml-lectures           # activate the new env
+python <scripts>
 #+end_src
->>>>>>> 019eec7 (Add files)
 
 *** References
 
@@ -400,33 +408,24 @@ More information about each of the features can be found at: https://www.cs.toro
 
 *** Boston House Prices -- example rows
 
-#+begin_src julia  :results output :session :exports both
-using DataFrames
-using MLDatasets: BostonHousing
-dataset = BostonHousing();
-dataset[1:5]
+#+begin_src python :exports both :results output replace
+import warnings
+from sklearn.datasets import load_boston
+with warnings.catch_warnings():
+    warnings.filterwarnings("ignore")
+    boston = load_boston()
+boston = pd.DataFrame(
+    data=np.c_[boston['data'], boston['target']],
+    columns=boston['feature_names'].tolist() + ['target'])
+print(boston[:2])
 #+end_src
 
 #+RESULTS:
-#+begin_example
-(features = 5×13 DataFrame
- Row │ CRIM     ZN       INDUS    CHAS   NOX      RM       AGE      DIS      RAD    TAX    PTRATIO  B        LSTAT   
-     │ Float64  Float64  Float64  Int64  Float64  Float64  Float64  Float64  Int64  Int64  Float64  Float64  Float64 
-─────┼────────────────────────────────────────────────────────────────────────────────────────────────────────────────
-   1 │ 0.00632     18.0     2.31      0    0.538    6.575     65.2   4.09        1    296     15.3   396.9      4.98 
-   2 │ 0.02731      0.0     7.07      0    0.469    6.421     78.9   4.9671      2    242     17.8   396.9      9.14
-   3 │ 0.02729      0.0     7.07      0    0.469    7.185     61.1   4.9671      2    242     17.8   392.83     4.03
-   4 │ 0.03237      0.0     2.18      0    0.458    6.998     45.8   6.0622      3    222     18.7   394.63     2.94
-   5 │ 0.06905      0.0     2.18      0    0.458    7.147     54.2   6.0622      3    222     18.7   396.9      5.33 , targets = 5×1 DataFrame
- Row │ MEDV
-     │ Float64
-─────┼─────────
-   1 │    24.0
-   2 │    21.6
-   3 │    34.7
-   4 │    33.4
-   5 │    36.2)
-#+end_example
+:       CRIM    ZN  INDUS  CHAS    NOX     RM  ...  RAD    TAX  PTRATIO      B  LSTAT  target
+: 0  0.00632  18.0   2.31   0.0  0.538  6.575  ...  1.0  296.0     15.3  396.9   4.98    24.0
+: 1  0.02731   0.0   7.07   0.0  0.469  6.421  ...  2.0  242.0     17.8  396.9   9.14    21.6
+: 
+: [2 rows x 14 columns]
 
 *** Boston House Prices -- concerns
 
@@ -477,39 +476,21 @@ thinking about the data carefully enough.
 
 *** Iris Dataset -- example rows
 
-#+begin_src julia :eval never-export
-using MLDatasets: Iris
-dataset = Iris();
-dataset[1:2]
+#+begin_src python :exports both :results output replace
+from sklearn.datasets import load_iris
+iris = load_iris()
+iris = pd.DataFrame(
+    data = np.c_[iris['data'], iris['target']],
+    columns = iris['feature_names'] + ['target'])
+print(iris.head(2))
 #+end_src
 
 #+RESULTS:
-#+begin_example
-(features = 2×4 DataFrame
- Row │ sepallength  sepalwidth  petallength  petalwidth
-     │ Float64      Float64     Float64      Float64
-─────┼──────────────────────────────────────────────────
-   1 │         5.1         3.5          1.4         0.2
-   2 │         4.9         3.0          1.4         0.2,
- targets = 2×1 DataFrame
- Row │ class
-     │ String15
-─────┼─────────────
-   1 │ Iris-setosa
-   2 │ Iris-setosa)
-#+end_example
+:    sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  target
+: 0                5.1               3.5                1.4               0.2     0.0
+: 1                4.9               3.0                1.4               0.2     0.0
 
 *** MNIST Dataset -- Image Classification
-
-#+begin_src julia :exports none :eval never-export
-using MLDatasets: MNIST
-using Plots
-dataset = MNIST();
-l = @layout [ a b c d ; e f g h ]
-p = [heatmap(dataset.features[:, :, i]', colorbar = false, ticks = false, yflip=true, height = 500) for i in 1:8]
-p = plot(p..., layout = l)
-savefig(p, "images/mnist.png")
-#+end_src
 
 #+ATTR_LATEX: :width 0.5\textwidth
 #+ATTR_HTML: :width 600px
@@ -530,21 +511,14 @@ http://yann.lecun.com/exdb/mnist/
 
 *** MNIST Dataset -- Example Rows
 
-#+begin_src julia
-using MLDatasets: MNIST
-dataset = MNIST();
-dataset[1:5]
+#+begin_src python :exports both :results output replace
+from sklearn.datasets import fetch_openml
+mnist = fetch_openml("mnist_784").data[:2]
 #+end_src
 
 #+RESULTS:
-: (features = [0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0;;; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0;;; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0;;; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0;;; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0], targets = [5, 0, 4, 1, 9])
 
 *** Large Movie Review Dataset -- Text Classification/Regression
-
-#+begin_src julia :results none :exports none :eval never-export
-using LargeMovieReviewDataset
-trainfiles()[1]
-#+end_src
 
 #+begin_example
 Story of a man who has unnatural feelings for a pig. Starts out with a
